@@ -51,8 +51,8 @@
 				Name="VCCLCompilerTool"
 				UseUnicodeResponseFiles="false"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../include"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;INCHI_LINK_AS_DLL;USING_OBDLL;HAVE_CONFIG_H;USING_DYNAMIC_LIBS;OBMore_EXPORTS"
+				AdditionalIncludeDirectories="../../include;../../src/formats/MCDL;."
+				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;INCHI_LINK_AS_DLL;USING_OBDLL;HAVE_CONFIG_H;USING_DYNAMIC_LIBS;OBMCDL_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -156,7 +156,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="../../include"
-				PreprocessorDefinitions="NDEBUG;USING_DYNAMIC_LIBS;WIN32;_WINDOWS;_USRDLL;INCHI_LINK_AS_DLL;HAVE_CONFIG_H;OBMore_EXPORTS"
+				PreprocessorDefinitions="NDEBUG;USING_DYNAMIC_LIBS;WIN32;_WINDOWS;_USRDLL;INCHI_LINK_AS_DLL;HAVE_CONFIG_H;OBMCDL_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -226,7 +226,15 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
+				RelativePath="..\..\src\ops\gen2D.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\formats\MCDLformat.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\mcdlutil.cpp"
 				>
 			</File>
 		</Filter>
@@ -236,6 +244,10 @@
 			>
 			<File
 				RelativePath="..\..\include\openbabel\babelconfig.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\openbabel\mcdlutil.h"
 				>
 			</File>
 			<File
